traces/bug_118.txt
src/medit/sftcpy.c:237: error: DEAD_STORE
  The value written to &v (type Feedback3Dcolor*) is never used.
Showing all 1 steps of the trace


src/medit/sftcpy.c:237:7: Write of unused value
235.   
236.       case GL_POINT_TOKEN:
237.         v = (Feedback3Dcolor *)ptr;
             ^
238.         ptr += 7;
239.         break; 
